# qgis-bicycle-planner-plugin

./: .flake8  .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
bicycle_planner/: OtherPurposes.py  OtherPurposes_2.py  Shortest_Path.py  WorkModel.py  __init__.py  assets.py  dialog.py  dialog_base.ui  main.py  metadata.txt  ops.py  params.py  plugin.py  resources.py  resources.qrc  test_table.py  utils.py
bicycle_planner/processing/: algorithm.py  provider.py
docs/: model-steps.dot  rapport.docx  rapport.md
misc/: OtherPurposes.py  WorkModel.py
scripts/: build_indices.py  format.sh  lint.sh  test.sh
tests/: __init__.py  conftest.py  test_ops.py
